--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ lazy_loader==0.4
 librosa==0.10.2.post1
 llvmlite==0.43.0
 msgpack==1.1.0
+mutagen==1.47.0
 numba==0.60.0
 numpy==2.0.2
 packaging==24.2
