--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.4
 pydantic_core==2.27.2
+pydub==0.25.1
 requests==2.32.3
 rsa==4.9
 scikit-learn==1.6.0
